# scrapy_railway

./: Dockerfile.scrapy  README.md  README.txt  docker-compose.yml  pyproject.toml  requirements.txt  test_db.py
myproject/: Dockerfile
myproject/myproject/: middlewares.py  pipelines.py  settings.py
myproject/myproject/spiders/: taraxacum.py
postgres-config/: pg_hba.conf
